profile names upfated

--- a/.github/funding.yml
+++ b/.github/funding.yml
@@ -1,6 +1,7 @@
-
+#github sponsors
+github: [Webspace-com]
 
 #Buy me a coffee
-buymeacoffee: [https://buymeacoffee.com/chaitanya_]
+buymeacoffee: [chaitanya_]
 
 
