--- a/.github/funding.yml
+++ b/.github/funding.yml
@@ -2,4 +2,4 @@
 github: [Webspace-com]
 
 #Buy me a coffee
-buymeacoffee: [buymeacoffee.com/chaitanya_]
+buymeacoffee: ["buymeacoffee.com/chaitanya_"]
